# EricoBot

./: .gitignore  AskCommands.py  AudioClipCommands.py  AudioPlayer.py  Config.py  EricoBot.py  PlayMusicCommands.py  README.md  askCommands.py  audioClipCommands.py  config.py  days.json  ericobot.py  json_writer.py  playMusicCommands.py  pyproject.toml  requirements.txt
