[project]
name = "ericobot"
version = "0.1.0"
description = "My personal discord bot, mainly for playing music in VC"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp==3.7.4.post0",
    "async-timeout>=3.0.1",
    "attrs>=20.3.0",
    "beautifulsoup4>=4.9.3",
    "certifi>=2019.9.11",
    "cffi>=1.14.5",
    "chardet>=3.0.4",
    "colorama>=0.4.1",
    "discord>=1.0.1",
    "discord-py>=2.4.0",
    "discord-py[voice]>=2.4.0",
    "gputil>=1.4.0",
    "idna>=2.8",
    "multidict>=5.1.0",
    "psutil>=5.6.7",
    "pycparser>=2.20",
    "pynacl>=1.4.0",
    "python-dotenv>=0.15.0",
    "requests>=2.22.0",
    "six>=1.15.0",
    "soupsieve>=2.2.1",
    "tqdm>=4.39.0",
    "typing-extensions>=3.7.4.3",
    "urllib3>=1.25.7",
    "wikipedia>=1.4.0",
    "wikipedia-api>=0.5.4",
    "yarl>=1.6.3",
    "youtube-dl>=2021.12.17",
    "yt-dlp",
]
